--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "docs": "jsdoc -c jsdoc.json"
+    "docs": "typedoc --options typedoc.json",
+    "docs:serve": "npx serve docs"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
@@ -40,9 +42,10 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "eslint-plugin-storybook": "^0.11.1",
     "globals": "^15.12.0",
-    "jsdoc": "^4.0.4",
     "prettier": "^3.4.2",
     "storybook": "^8.4.7",
+    "typedoc": "^0.27.3",
+    "typedoc-plugin-markdown": "^4.3.1",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.15.0",
     "vite": "^6.0.1"
